app/css/app.css
body {
  padding-left: 5px;
  padding-right:5px;
}

.hm-logo {
  margin-left: 0;
}

.container {
  max-width: 50rem;
}

/*
  Cards
*/

.cards {
  display: flex;
  justify-content: space-around;
  flex-flow: wrap;
}

.card[hidden=""] {
  display: none;
}

.card[disabled] {
  border-style: dashed;
}

.votePanel .cards {
  justify-content: center;
  min-height: 150px;
}

.cards .card {
  margin-bottom: 0.5em;
}
.card {
  border-width:2px;
  border-radius:10px;
  position: relative;
  display: inline-block;
  min-width: 2.8em;
  height: 4.5em;
  font-size: 1.5em;
  text-align: center;
  line-height: 4.5em;
  cursor: pointer;
  overflow: hidden;
  padding: 0 8px;
}

.card:hover {
  background: #fafafa;
  color: #D24632;
  border-color: #D24632;
  border-width: 2px;
  border-top-width: 1px;
  border-bottom-width: 3px;
  rotate: 1deg;
}

.card .card--name {
  display: none;
}

.card:hover .card--name {
  display: block;
  position: absolute;
  left: 0;
  bottom: 0;
  font-size: 12px;
  max-height: 80px;
  line-height: 15px;
  font-weight: bold;
  width: 100%;
  text-align: center;
}

.card-panel {
  min-width: 3.5em;
}

.cardPanel .card {
  min-width: 3em;
  height: 5em;
  line-height: 5em;
  font-size: 2em;
}

.cardPanel .card.card--selected {
  outline: 4px solid black;
  font-weight: bold;
}

.card--2-sided {
  display: inline-block;
}

.card--selected {
  background-color: gold;
}
.card--selected:hover,
.card--selected:focus {
  background-color: gold;
}
.card--2-sided.card--selected {
  background-color: transparent;
  background-image: none;
}

.card--2-sided > .card--selected,
.card--2-sided.card--selected {
  background-color: gold;
}
.vote.card {
  cursor: default;
  font-weight: bold;
}

.vote.card--selected {
  cursor: pointer;
}

.flipped-stagger .card--side-1 {
  display: none;
}

.flipped-stagger .card:hover .card--name {
  display: none;
}

/*

  Dropdown

*/
.dropdown-wrapper {
  position: relative;
}
.dropdown-wrapper .dropdown {
  position: absolute;
  display: none;
  top: 110%;
  left: 0;
  min-width: 10em;
  background: #fff;
  pointer-events: none;
  margin: 0;
  margin-bottom: 1em;
  border-radius: 4px;
  border: 1px solid #737373;
  padding: 0;
  z-index: 3;
}
.dropdown-wrapper.dropdown-open .dropdown {
  display: block;
  pointer-events: auto;
}

.dropdown li {
  list-style-type: none;
}
.dropdown .dropdown__item {
  display: block;
  text-decoration: none;
  padding: 10px 20px;
}

/*

  Alerts

*/
.alert {
  z-index: 3;
  top: 0;
  left: 0;
  width: 100%;
  position: fixed;
}
@media screen and (min-width: 55em) {
  .alert {
    position: absolute;
  }
}
.alert .activity {
  margin-top: 0.2em;
  margin-bottom: 0.2em;
  margin-right: 0.2em;
  float: right;
  text-align: right;
}
.socketMessage,
.appError,
.message {
  padding: 0 2em 0 0.5em;
  line-height: 1.5em;
  margin: 1em;
  padding: 1em 2em;
  max-width: 100%;
  border-radius: 4px;
  color: rgba(0,0,0,.7);
}

.socketMessage:empty,
.appError:empty,
.message:empty {
  display: none;
}

.message {
  background-color: #ffdd57;
}
.socketMessage {
  background-color: black;
  color: #fff;
}
.appError {
  background-color: #f14668;
  color: #fff;
}
/*

  Surgical classes

*/
.no-js-hide {
  display: none;
}

.pullright {
  float: right;
}

.header {
  border-bottom: 1px solid #d9d9d9;
  margin: 1.66667rem 0;
}

.header a {
  border-bottom: none;
}

.header .header__text, .header .hm-logo {
  font-size: 1.8rem;
  margin-top: 0;
  margin-bottom: 0.5em;
}

.switch {
  margin: 1.66667rem 0;
}

.switch > div {
  display: inline-block;
}

.header > a {
  text-decoration: none;
  border-bottom: none;
}
.header > .hm-logo {
  display: inline-block;
  height: 3.3325rem;
}

h1.header__text {
  display: inline-block;
}

.admin-indicator {
  vertical-align: text-bottom;
  line-height: 1.555rem;
  font-size: 1rem;
  display: inline-block;
}

.post-vote-controls {
  display: flex;
  justify-content: center;
  flex-direction: row;
}

